<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/text_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:text="@string/sure_text"
                android:textSize="17sp" />

            <Button
                android:id="@+id/conf_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:background="@color/general_color"
                android:text="@string/no_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/conf_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:background="@color/general_color"
                android:text="@string/yes_text"
                android:textColor="@android:color/white" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>